--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,77 @@
-<h1> Finally </h1>
+<nav class="navbar navbar-fixed-top navbar-inverse">
+<p class="navbar-text"> This is the header</p>
+  <p class="navbar-text pull-right"> Private Pyle </p>
+</nav>
+
+<div class="container">
+  <p class="alert alert-success"> Alert! </p>
+</div>
+
+<div class="page-header">
+  <h1>Hello there <small> Answer me... please</small></h1>
+</div>
+
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="#">Home</a></li>
+  <li role="presentation"><a href="#">Profile</a></li>
+  <li role="presentation"><a href="#">The World</a></li>
+</ul>
+
+<ol class="breadcrumb">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">This is a thing</a></li>
+  <li class="active">Data</li>
+</ol>
+
+<div class="jumbotron">
+  <h1>Jumbo to the Tron</h1>
+  <p>Powerful</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Don't Learn more, Learn Everything</a></p>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-body">
+    Dinosaurs
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6"> Space here
+
+  </div>
+  <div class="col-md-6"> Also some space
+
+  here
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6"> This is a column</div>
+  <div class="col-md-6"> This is also a column</div>
+</div>
+
+<div class="well"> I'm in a well and its not that bad...for being in a well</div>
+
+<div class="row">
+  <div class="col-md-4"> Columns</div>
+  <div class="col-md-4"> 4 </div>
+  <div class="col-md-4"> DAYS </div>
+</div>
+
+<table class="table table-hover">
+  <td> Yes </td>
+  <p> What does all of this mean? </p>
+  <td> No </td>
+  <td> Maybe </td>
+  <tr>
+    <td> Music </td>
+    <td> Moves </td>
+    <td> People </td>
+  </tr>
+  <tr>
+    <td> 1 </td>
+    <td> 2 </td>
+    <td> 3 </td>
+  </tr>
+
+</table>
